[package]
name = "ck-loader"
version = "0.1.1"
edition = "2021"
rust-version = "1.80" # 要求最低 Rust 版本

[dependencies]
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
mimalloc = "0.1"

[profile.release]
opt-level = 3        # 最大优化
lto = true           # 开启链接时优化，减小体积并提升性能
codegen-units = 1    # 进一步优化性能
strip = true         # 自动从二进制中移除调试符号，减小体积
